# DND-Character-Creator

./: .clang-format  .gitignore  CMakeLists.txt  capp.cpp  capp.hpp  core.db  scheme.txt  tree.txt  xmltagextractor.cpp
Creator/: CMakeLists.txt
Creator/Base/: CMakeLists.txt  CreatorFactory.hpp  LoggingTools.hpp  PathingTools.hpp  SQBaseObject.cpp  SQBaseObject.hpp  SQLiteWrapper.hpp  SQObject.cpp  SQObject.hpp  StringTools.cpp  XMLTools.cpp
Creator/Tools/: CMakeLists.txt  CreatorFactory.cpp  CreatorFactory.hpp  PathingTools.hpp  StringTools.hpp  TagEnums.hpp  XMLTools.cpp  XMLTools.hpp
UI/: CMakeLists.txt  primativeDesign.cpp  primativeDesign.hpp
UI/Base/: CMakeLists.txt  UIDesign.fbp  baseProject.cpp  baseProject.h
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
docs/: CharacterScheme.xml
include/Creator/: Character.hpp  DescriptionTools.hpp  EntityList.hpp
include/Creator/Base/: CreatorFactory.hpp  LoggingTools.hpp  PathingTools.hpp  SQBaseObject.hpp  SQLiteWrapper.hpp  SQObject.hpp  StringTools.hpp  TagEnums.hpp  XMLTools.hpp
include/UI/: primativeDesign.hpp
src/: CMakeLists.txt
src/Creator/: CMakeLists.txt  Character.cpp  DescriptionTools.cpp  EntityList.cpp
src/Creator/Base/: CMakeLists.txt  CreatorFactory.cpp  SQBaseObject.cpp  SQObject.cpp  StringTools.cpp  XMLTools.cpp
src/UI/: CMakeLists.txt  primativeDesign.cpp
src/UI/Base/: CMakeLists.txt  UIDesign.fbp  baseProject.cpp  baseProject.h
tests/: CMakeLists.txt  CharacterLoad.cpp  ParLoad.cpp
